@@ -565,42 +565,77 @@ $keepalive{$properties}{"min"} ." nodes having '$properties'\n"
 
             # Launching commands
             if ( $#commandToLaunch >= 0 ) {
-                oar_debug(
-"[Hulot] Launching commands to nodes by using WindowForker\n"
-                );
-
-                # fork in order to don't block the pipe listening
-                $forker_pid = fork();
-                if ( defined($forker_pid) ) {
-                    if ( $forker_pid == 0 ) {
-                        my %forker_type = (
-                            "type"     => "Hulot",
-                            "id_msg"   => $id_msg_hulot,
-                            "template" => $pack_template
-                        );
-
-                        ( my $t, my $y ) = window_forker::launch(
-                            \@commandToLaunch,
-                            get_conf_with_default_param(
-                                "ENERGY_SAVING_WINDOW_SIZE",
-                                $ENERGY_SAVING_WINDOW_SIZE
-                            ),
-                            get_conf_with_default_param(
-                                "ENERGY_SAVING_WINDOW_TIME",
-                                $ENERGY_SAVING_WINDOW_TIME
-                            ),
-                            get_conf_with_default_param(
-                                "ENERGY_SAVING_WINDOW_TIMEOUT",
-                                $ENERGY_SAVING_WINDOW_TIMEOUT
-                            ),
-                            0,
-                            \%forker_type
-                        );
-                        exit 0;
+                if (get_conf_with_default_param("ENERGY_SAVING_WINDOW_FORKER_BYPASS", "no") eq "yes") {
+                    #Bypassing window_forker
+                    oar_debug("[Hulot] Launching commands to nodes\n");
+                    
+                    #Strings that will be passed to wakeup and shutdown commands
+                    my $nodesToWakeUp = "";
+                    my $nodesToShutDown = "";
+                    
+                    #Build strings to pass to wakeup and shutdown commands
+                    my $base = iolib::connect();
+                    foreach my $command ( @commandToLaunch ) {
+                        (my $cmd, my $node)=split(/:/,$command, 2);
+                        if ( $cmd eq "HALT" ) {
+                            $nodesToShutDown .= $node . " ";
+                            iolib::add_new_event_with_host($base,"HALT_NODE",0,"Node $node halt request",[$node]);
+                        }
+                        elsif ( $cmd eq "WAKEUP" ) {
+                            $nodesToWakeUp .= $node . " ";
+                            iolib::add_new_event_with_host($base,"WAKEUP_NODE",0,"Node $node wake-up request",[$node]);
+                        }
+                    }
+                    iolib::disconnect($base);
+                    
+                    my $command_to_exec = "echo \"$nodesToWakeUp\" | ".get_conf("ENERGY_SAVING_NODE_MANAGER_WAKE_UP_CMD");
+                    if ($nodesToWakeUp) {
+                        execute_action($command_to_exec);
+                    }
+                    $command_to_exec = "echo \"$nodesToShutDown\" | ".get_conf("ENERGY_SAVING_NODE_MANAGER_SLEEP_CMD");
+                    if ($nodesToShutDown) {
+                        execute_action($command_to_exec);
                     }
                 }
                 else {
-                    oar_error("[Hulot] Fork system call failed\n");
+                    # Use the window forker to execute commands in parallel
+                    oar_debug(
+    "[Hulot] Launching commands to nodes by using WindowForker\n"
+                    );
+
+                    # fork in order to don't block the pipe listening
+                    $forker_pid = fork();
+                    if ( defined($forker_pid) ) {
+                        if ( $forker_pid == 0 ) {
+                            my %forker_type = (
+                                "type"     => "Hulot",
+                                "id_msg"   => $id_msg_hulot,
+                                "template" => $pack_template
+                            );
+
+                            ( my $t, my $y ) = window_forker::launch(
+                                \@commandToLaunch,
+                                get_conf_with_default_param(
+                                    "ENERGY_SAVING_WINDOW_SIZE",
+                                    $ENERGY_SAVING_WINDOW_SIZE
+                                ),
+                                get_conf_with_default_param(
+                                    "ENERGY_SAVING_WINDOW_TIME",
+                                    $ENERGY_SAVING_WINDOW_TIME
+                                ),
+                                get_conf_with_default_param(
+                                    "ENERGY_SAVING_WINDOW_TIMEOUT",
+                                    $ENERGY_SAVING_WINDOW_TIMEOUT
+                                ),
+                                0,
+                                \%forker_type
+                            );
+                            exit 0;
+                        }
+                    }
+                    else {
+                        oar_error("[Hulot] Fork system call failed\n");
+                    }
                 }
             }
 
@@ -641,6 +676,21 @@ $keepalive{$properties}{"min"} ." nodes having '$properties'\n"
         close(FIFO);
         # Unfortunately, never reached:
         shmctl($id_msg_hulot, IPC_RMID, 0);
+    }
+}
+
+sub execute_action($) {
+    my $command_to_exec = shift;
+    my $forker_pid = fork();
+    if ( defined($forker_pid) ) {
+        if ( $forker_pid == 0 ) {
+            exec($command_to_exec);
+        }
+    }
+    else {
+        oar_error("[Hulot] Fork system call failed, command \"" . 
+            $command_to_exec . 
+            "\" not executing\n");
     }
 }
 
