@@ -406,6 +406,12 @@ ENERGY_SAVING_INTERNAL="no"
 # Window size minimum is 1
 #ENERGY_SAVING_WINDOW_SIZE="25"
 
+# Parameter to bypas the window mechanism embedded in the energy saving module.
+# Possible values are "yes" and "no"
+# When set to "yes", the list of nodes to wake up or shut down is passed to 
+# ENERGY_SAVING_NODE_MANAGER_*_CMD through stdin. 
+#ENERGY_SAVING_WINDOW_FORKER_BYPASS="no"
+
 # Time in second between execution of each window.
 # Minimum is 0 to set no delay between each window.
 # This value must be smaller than ENERGY_SAVING_NODE_MANAGER_TIMEOUT.
