@@ -22,6 +22,7 @@ version 2.5.0:
   - Poar: web portal using the REST API (experimental)
   - Oaradmin YAML export support for resources creation (for the REST API)
   - New OCAML scheduler (experimental)
+  - Bugfix #10567 enabling to bypass window mechanism of hulot.
 
 version 2.4.3:
 --------------
